@@ -27,13 +27,13 @@ class CScreenMap extends CScreenBase {
 	 * @return CDiv (screen inside container)
 	 */
 	public function get() {
-		$severity = null;
+		$map_options = [];
 
 		if (array_key_exists('severity_min', $this->screenitem)) {
-			$severity = $this->screenitem['severity_min'];
+			$map_options['severity_min'] = $this->screenitem['severity_min'];
 		}
 
-		$map_data = CMapHelper::get($this->screenitem['resourceid'], ['severity_min' => $severity]);
+		$map_data = CMapHelper::get($this->screenitem['resourceid'], $map_options);
 		$map_data['container'] = '#map_'.$this->screenitem['screenitemid'];
 		$this->insertFlickerfreeJs($map_data);
 
